Adding support to stripped down jre via jlink